--- a/src/index.css
+++ b/src/index.css
@@ -26,12 +26,11 @@ body {
 .header {
   background-image: 
     linear-gradient(to bottom, rgba(133, 180, 176, 0) 30%, rgba(242, 242, 242, 1) 100%),
-    url('./assets/eklutna.jpg');   background-size: cover; /* Ensures the image covers the area */
+    url('/assets/eklutna.jpg');   background-size: cover; /* Ensures the image covers the area */
   background-position: center; 
   background-repeat: no-repeat; /* Prevents tiling */
   background-size: cover; /* Ensures it covers the full area */
   width: 100vw; 
-
 
   background-color: #85B4B0;
   width: 100vw;
@@ -39,7 +38,6 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-
 }
 
 
