trying to get page to deploy on gh pages

--- a/src/index.css
+++ b/src/index.css
@@ -26,7 +26,7 @@ body {
 .header {
   background-image: 
     linear-gradient(to bottom, rgba(133, 180, 176, 0) 30%, rgba(242, 242, 242, 1) 100%),
-    url('/assets/eklutna.jpg');   background-size: cover; /* Ensures the image covers the area */
+    url('/eklutna.jpg');   background-size: cover; /* Ensures the image covers the area */
   background-position: center; 
   background-repeat: no-repeat; /* Prevents tiling */
   background-size: cover; /* Ensures it covers the full area */
